apps/overlays/prod/galactica/networking/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: external
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: external
    namespace: networking
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: external.andorigna.com
spec:
  gatewayClassName: external
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.andorigna.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: observability-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
