apps/overlays/prod/galactica/networking/longhorn-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: networking
spec:
  parentRefs:
    - name: internal
      sectionName: http
  hostnames:
    - longhorn.ninhu.xyz
  rules:
    - backendRefs:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
